--- a/.github/workflows/2048-game.yml
+++ b/.github/workflows/2048-game.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
 env:
-  IMAGE_NAME: "${{ secrets.DOCKER_USER }}/2048-fauzifirdaus"
+  IMAGE_NAME: "${{ secrets.DOCKER_USER }}/2048-fauzifirdaus21"
   DOCKER_USER: "${{ secrets.DOCKER_USER }}"
 jobs:
   build-push-image:
